--- a/rdhist/Cargo.toml
+++ b/rdhist/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Fabien Marteau <mail@fabienm.eu>"]
 edition = "2018"
 
 [dependencies]
-yaml-rust = "0.4"
-image = "0.23.14"
-itertools = "0.10.0"
+yaml-rust = "*"
+image = "*"
+itertools = "*"
+clap = "*"
+#ffmpeg = "*"
