--- a/rdhist/Cargo.toml
+++ b/rdhist/Cargo.toml
@@ -5,10 +5,11 @@ authors = ["Fabien Marteau <mail@fabienm.eu>"]
 edition = "2018"
 
 [dependencies]
-yaml-rust = "*"
 image = "*"
 itertools = "*"
 clap = "3.0.5"
 dirs = "4.0"
 main_error = "0.1.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
 #ffmpeg = "*"
