--- a/rdhist/Cargo.toml
+++ b/rdhist/Cargo.toml
@@ -12,4 +12,5 @@ dirs = "4.0"
 main_error = "0.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+rustyline = "9.1.2"
 #ffmpeg = "*"
