--- a/rdhist/Cargo.toml
+++ b/rdhist/Cargo.toml
@@ -10,6 +10,7 @@ image = "*"
 itertools = "*"
 clap = "3.0.5"
 dirs = "4.0"
+curl = "0.4.44"
 main_error = "0.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
