--- a/rdhist/Cargo.toml
+++ b/rdhist/Cargo.toml
@@ -10,7 +10,11 @@ image = "*"
 itertools = "*"
 clap = "3.0.5"
 dirs = "4.0"
-curl = "0.4.44"
+reqwest = { version = "0.11.3", features = ["stream", "blocking"] }
+futures-util = "0.3.14"
+futures = "0.3.14"
+tokio = {version = "0.2.*", features = ["full"] }
+indicatif = "0.15.0"
 main_error = "0.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
