--- a/rdhist/Cargo.toml
+++ b/rdhist/Cargo.toml
@@ -19,5 +19,6 @@ main_error = "0.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 rustyline = "9.1.2"
+caprice = "*"
 discid = "0.4.4"
 #ffmpeg = "*"
