--- a/rdhist/Cargo.toml
+++ b/rdhist/Cargo.toml
@@ -20,5 +20,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 rustyline = "9.1.2"
 caprice = "*"
+regex = "*"
 discid = "0.4.4"
 #ffmpeg = "*"
